; ModuleID = '/home/carl/AnghaBench/libgit2/tests/diff/extr_blob.c_test_diff_blob__patch_with_freed_blobs.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/diff/extr_blob.c_test_diff_blob__patch_with_freed_blobs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@GIT_BUF_INIT = common dso_local global %struct.TYPE_5__ zeroinitializer, align 4
@.str = private unnamed_addr constant [9 x i8] c"45141a79\00", align 1
@g_repo = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [9 x i8] c"4d713dc4\00", align 1
@BLOB_DIFF = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_diff_blob__patch_with_freed_blobs() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_5__, align 4
  %7 = bitcast %struct.TYPE_5__* %6 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %7, i8* align 4 bitcast (%struct.TYPE_5__* @GIT_BUF_INIT to i8*), i64 4, i1 false)
  %8 = call i32 @git_oid_fromstrn(i32* %1, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32 8)
  %9 = call i32 @cl_git_pass(i32 %8)
  %10 = load i32, i32* @g_repo, align 4
  %11 = call i32 @git_blob_lookup_prefix(i32** %3, i32 %10, i32* %1, i32 4)
  %12 = call i32 @cl_git_pass(i32 %11)
  %13 = call i32 @git_oid_fromstrn(i32* %2, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i32 8)
  %14 = call i32 @cl_git_pass(i32 %13)
  %15 = load i32, i32* @g_repo, align 4
  %16 = call i32 @git_blob_lookup_prefix(i32** %4, i32 %15, i32* %2, i32 4)
  %17 = call i32 @cl_git_pass(i32 %16)
  %18 = load i32*, i32** %3, align 8
  %19 = load i32*, i32** %4, align 8
  %20 = call i32 @git_patch_from_blobs(i32** %5, i32* %18, i32* null, i32* %19, i32* null, i32* null)
  %21 = call i32 @cl_git_pass(i32 %20)
  %22 = load i32*, i32** %3, align 8
  %23 = call i32 @git_blob_free(i32* %22)
  %24 = load i32*, i32** %4, align 8
  %25 = call i32 @git_blob_free(i32* %24)
  %26 = load i32*, i32** %5, align 8
  %27 = call i32 @git_patch_to_buf(%struct.TYPE_5__* %6, i32* %26)
  %28 = call i32 @cl_git_pass(i32 %27)
  %29 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %6, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = load i32, i32* @BLOB_DIFF, align 4
  %32 = call i32 @cl_assert_equal_s(i32 %30, i32 %31)
  %33 = load i32*, i32** %5, align 8
  %34 = call i32 @git_patch_free(i32* %33)
  %35 = call i32 @git_buf_dispose(%struct.TYPE_5__* %6)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @cl_git_pass(i32) #2

declare dso_local i32 @git_oid_fromstrn(i32*, i8*, i32) #2

declare dso_local i32 @git_blob_lookup_prefix(i32**, i32, i32*, i32) #2

declare dso_local i32 @git_patch_from_blobs(i32**, i32*, i32*, i32*, i32*, i32*) #2

declare dso_local i32 @git_blob_free(i32*) #2

declare dso_local i32 @git_patch_to_buf(%struct.TYPE_5__*, i32*) #2

declare dso_local i32 @cl_assert_equal_s(i32, i32) #2

declare dso_local i32 @git_patch_free(i32*) #2

declare dso_local i32 @git_buf_dispose(%struct.TYPE_5__*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
